--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,48 +1,76 @@
 body {
     margin: 0;
-    padding: 0 10%;
-    background-color: #f99f00;
+    padding: 0;
+    background-color: #1a1a1a; /* Dark background color */
+    font-family: 'Arial', sans-serif;
 }
 
 main {
-    backdrop-filter: blur(80%);
+    padding: 20px;
+    color: #f2f2f2; /* Light text color */
+    text-align: center;
+    position: relative; /* Relative positioning for absolute children */
 }
 
-a {
-    text-decoration: none;
-    color: white;
+h1 {
+    font-size: 2.5em;
+    color: #ff6347; /* Reddish color for headings */
 }
 
-a:hover {
-    text-decoration: none;
+p {
+    font-size: 1.2em;
+    margin-bottom: 15px;
+}
+
+section {
+    margin-top: 40px;
+}
+
+h2 {
+    font-size: 2em;
+    color: #ff6347; /* Reddish color for headings */
 }
 
 #cardsContainer {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
     flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .card {
-    display: inline-block;
-    align-items: center;
     width: 200px;
-    height: 200px;
-    border-radius: 10px 0px 10px 0px;
-    background: radial-gradient(circle, rgba(255,90,159,1) 35%, rgba(195,29,127,1) 100%);
-    margin: 10px;
+    height: 250px;
+    border-radius: 10px;
+    background: #333; /* Dark gray background color */
+    margin: 15px;
     padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: transform 0.3s ease-in-out;
 }
 
-.card * {
-    text-align: center;
+.card a {
+    text-decoration: none;
+    color: #f2f2f2; /* Light text color */
+}
+
+.card:hover {
+    transform: scale(1.05);
 }
 
 .card img {
-    display: block;
-    margin: 0 auto;
-    border: 3.5px solid white;
+    width: 100px;
+    height: 100px;
+    border: 3.5px solid #f2f2f2; /* Light border color */
     border-radius: 50%;
+    margin-bottom: 10px;
 }
+
+#footer {
+    background-color: #1a1a1a; /* Dark background color */
+    color: #f2f2f2; /* Light text color */
+    padding: 20px;
+}
+
