--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,20 +1,39 @@
-#cardsContainer {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+body {
+    width: 100vw;
+    height: 100vh;
+    background-image: url(../imgs/background_00.png);
+    background-position: center;
+    overflow: hidden;
+}
+
+#info-conteiner{
+    background-color: rgba(8, 80, 56, 0.568);
+    width: 50vw;
+    border-radius: 20px;
+    align-content: center;
     align-items: center;
+    padding-left: 20px;;
+}
+
+#cardsContainer {
+    width: 80vw;
+    display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
 }
 
 .card {
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     width: 200px;
     height: 200px;
-    border-radius: 10px 0px 10px 0px;
-    background: radial-gradient(circle, rgba(255,90,159,1) 35%, rgba(195,29,127,1) 100%);
-    margin: 10px;
+    border-radius: 10px;
+    background: linear-gradient(to bottom right, rgba(255,90,159,1), rgba(195,29,127,1));
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Sombra suave */
     padding: 20px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease; /* Transições suaves */
 }
 
 .card * {
@@ -22,8 +41,29 @@
 }
 
 .card img {
-    display: block;
-    margin: 0 auto;
-    border: 3.5px solid white;
+    width: 100px;
+    height: 100px;
+    border: 3px solid white;
     border-radius: 50%;
+    margin-bottom: 10px;
+}
+
+.card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+a {
+    color: #3a0606;
+    text-decoration: none;
+    transition: color 0.3s ease;
+    cursor: pointer;
+}
+
+a:hover {
+    color: rgba(204, 17, 17, 0.7);
+}
+
+#projects p a {
+    font-size: 32px;
 }
