--- a/assets/css/gdd.css
+++ b/assets/css/gdd.css
@@ -1,14 +1,20 @@
+body {
+    background-image: url(../imgs/background_03.png);
+    background-repeat: repeat;
+    background-attachment: fixed;
+    scroll-behavior: smooth;
+    color: rgb(214, 212, 190);
+}
+
 header {
     display: flex;
     justify-items: center;
     align-items: center;
     flex-direction: column;
-
 }
 
 h1 {
     font-size: 50px;
-    color: rgb(29, 1, 1);
 }
 
 h2 {
@@ -22,36 +28,27 @@ main section p {
     padding: 5px;
     border-radius: 20px;
     background-color: #0458125d;
-    color: rgb(214, 212, 190);
-
 }
 
-body {
-    background-image: url(../imgs/background_03.png);
-    background-repeat: repeat;
-    background-attachment: fixed;
-    scroll-behavior: smooth;
-}
-
-#main-content-list{
+#main-content-list {
     width: 80vw;
-    height: 80vh;
+    /*height: 80vh;*/
     display: flex;
     justify-items: center;
     align-items: center;
     flex-direction: column;
 }
 
-ul{
+ul {
     padding: 5vh 10vh;
     background-color: #0458125d;
     border-radius: 20px;
     font-size: larger;
+    text-align: center;
 }
 
 a {
-    color: #3a0606;
-    text-decoration: none;
+    color: rgb(214, 212, 190);
     transition: color 0.3s ease;
     cursor: pointer;
 }
@@ -62,4 +59,33 @@ a:hover {
 
 #projects p a {
     font-size: 32px;
+}
+
+#download-conteiner {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10vw;
+    padding-top: 30vh;
+}
+
+.button-download {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20vw;
+    height: 10vh;
+    background-color: #001e19ab;
+    border-radius: 20px;
+}
+
+.button-download:hover {
+    transform: translateY(15px);
+     transition: 0.8s ease;
+}
+
+#download-conteiner a {
+    text-decoration: none;
+    font-size: 45px;
 }
